fix: update spacing

--- a/src/styles/layout/_form.scss
+++ b/src/styles/layout/_form.scss
@@ -14,7 +14,7 @@
     margin-top: 4rem;
   }
 
-  p {
+  .spaced-p {
     margin-bottom: 1rem;
   }
 
